Fixed broken styles after upgrading to angular 15

--- a/sarf-ui/src/app/sarf-verb-pronouns/sarf-verb-pronouns.component.css
+++ b/sarf-ui/src/app/sarf-verb-pronouns/sarf-verb-pronouns.component.css
@@ -44,6 +44,7 @@
     border-radius: 2px;
     border-width: 0px 0px 1px 0px;
     border-color: slategray;
+    font-family: 'Kitab';
 }
 
 .verb {
@@ -53,6 +54,7 @@
     border-radius: 2px;
     border-width: 0px 0px 1px 0px;
     border-color: slategray;
+    font-family: 'Kitab';
 }
 
 em {
